Added the header section and login wrapper

--- a/index.html
+++ b/index.html
@@ -4,13 +4,26 @@
 	<title>
 		Demo login
 	</title>
+	<!-- Google fonts -->
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+	<!-- FontAwesome CDN -->
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<!-- Stylesheets -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<!-- Javascript files -->
 	<script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
-	
+	<header>
+		<h2 class="whitecol">Welcome to Social network</h2>
+		<h4 class="whitecol">Make your dreams come true with PhpBlue</h4>
+		<h3 class="whitecol">Social Networking Script</h3>
+	</header>
+
+	<div class="loginwrapper">
+		<h4><span class="fa fa-facebook-official"></span>Signup or login with facebook</h4>
+		
+	</div>
 </body>
 
 </html>
