--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!-- Google fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 	<!-- FontAwesome CDN -->
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	<!-- Stylesheets -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<!-- Javascript files -->
@@ -21,7 +21,8 @@
 	</header>
 
 	<div class="loginwrapper">
-		<h4><span class="fa fa-facebook-official"></span>Signup or login with facebook</h4>
+		<a href="#"><h4><span class="fa fa-facebook-official"></span> Signup or login with facebook</h4></a>
+		<h5><span>or Signup with your email</span></h5>
 		
 	</div>
 </body>
