text area added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 	<div class="loginwrapper">
 		<a href="#"><h4><span class="fa fa-facebook-official"></span> Signup or login with facebook</h4></a>
 		<h5><span>or Signup with your email</span></h5>
+		<form action="POST">
+			<div class="login"><span class="fa fa-user spanname"></span><input type="text" name="name" placeholder="Full Name" ></div>
+			<div class="login"><span class="fa fa-user spanemail"></span><input type="text" name="name" placeholder="Email Address" ></div>
+			<div class="login"><span class="fa fa-user spanpass"></span><input type="text" name="name" placeholder="Password" ></div>
+		</form>
 		
 	</div>
 </body>
