--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
 		</form>
 		
 	</div>
+
+	<footer>
+		<h6 class="whitecol">Copyright &copy; PhpBlue2014 All Rights Reserved</h6>
+		<h6 class="whitecol">Powered by PhpBlue-<a href="">Admin</a>-<a href="">Terms</a>-<a href="">Privacy policy</a>-<a href="">About</a></h6>
+	</footer>
 </body>
 
 </html>
