Edit: changed header text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<header>
-		<h2 class="whitecol">Welcome to Social network</h2>
+		<h2 class="whitecol">Welcome to your Social network</h2>
 		<h4 class="whitecol">Make your dreams come true with PhpBlue</h4>
 		<h3 class="whitecol">Social Networking Script</h3>
 	</header>
