--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 		<h5><span>or Signup with your email</span></h5>
 		<form action="POST">
 			<div class="login"><span class="fa fa-user spanname"></span><input type="text" name="name" placeholder="Full Name" ></div>
-			<div class="login"><span class="fa fa-user spanemail"></span><input type="text" name="name" placeholder="Email Address" ></div>
-			<div class="login"><span class="fa fa-user spanpass"></span><input type="text" name="name" placeholder="Password" ></div>
+			<div class="login"><span class="fa fa-envelope spanemail"></span><input type="text" name="name" placeholder="Email Address" ></div>
+			<div class="login"><span class="fa fa-lock spanpass"></span><input type="text" name="name" placeholder="Password" ></div>
 			<div class="login"><h4><input type="checkbox">By signing up I agree with <span class="prState"><a href="">Terms</a></span> and <span class="prState"><a href="">privacy policy</a></span></h4></div>
 			<button type="submit" class="signupbttn">Sign up with your email address</button>
 			<button type="submit" class="loginbttn">Login with your email address</button>
